# tag-interaction-widget

./: .gitignore  README.md  WIDGET_TEMPLATE_NOTES.md  doover_config.json  pyproject.toml  upload_widget.sh
.appgen/: PHASE.md  PLAN.md
assets/: TagInteraction.js
src/tag_interaction_widget/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
tag-interaction/: ConcatenatePlugin.ts  package-lock.json  package.json  rsbuild.config.ts
tag-interaction/src/: TagInteraction.js
tests/: test_imports.py
